2012-03-19  Andrea Del Prete  <andrea.delprete@iit.it>
    * src/libYARP_math/src/SVD.cpp
    * src/libYARP_math/include/yarp/math/SVD.h
    * src/libYARP_math/harness/SVDTest.cpp
    Add SVD and pseudo-inverse for fat matrices (and related tests).
    
2012-03-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Network.cpp: respect timeout in
	Network::exists for sockets that are reachable but
	unresponsive.

	* src/libYARP_OS/harness/NetworkTest.cpp: add test to make
	sure timeout option in Network::write and Network::check
	are effective [thanks Ali Paikan]

2012-02-29  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/BottleTest.cpp: use floating point
	comparisons in tests [thanks Ugo Pattacini]

	* src/libYARP_OS/src/Bottle.cpp: add Bottle::read(PortWriter)
	helper function [thanks Miguel Sarabia Del Castillo]

	* src/libYARP_OS/src/Value.cpp: fix wire format of
	Value objects [thanks Miguel Sarabia Del Castillo]

	* src/libYARP_sig/harness/MatrixTest.cpp: add test for
	serialization problem reported on robotcub-hackers
	[thanks Miguel Sarabia Del Castillo]

2012-02-22  Ugo Pattacini  <ugo.pattacini@iit.it>
        * src/libYARP_dev/include/yarp/dev/GazeControl.h:
        added new methods for setting/getting VOR and OCR gains.

2012-02-21  Ugo Pattacini  <ugo.pattacini@iit.it>
        * src/libYARP_dev/include/yarp/dev/GazeControl.h:
        added the method lookAtMonoPixelWithVergence().

2012-02-17  Andrea Del Prete  <andrea.delprete@iit.it>
    * src/libYARP_sig/src/Vector.cpp
    Modify Vector::operator=() so that it does not reallocate
    the memory if the new vector has the same size as the current
    vector.

2012-02-17  Ugo Pattacini  <ugo.pattacini@iit.it>
        * src/libYARP_dev/include/yarp/dev/GazeControl.h:
        added two new functionalities implemented by get3DPointFromAngles()
        and getAnglesFrom3DPoint() methods.

2012-02-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
